# openai_chat_completions_thinking

./: pyproject.toml  thinking-openai-chat-completions.ipynb
