[project]
name = "openai-chat-completions-thinking"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeremy Wortz",email = "jwortz@google.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.86.0,<2.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
